--- a/config/tinymce.yml
+++ b/config/tinymce.yml
@@ -6,6 +6,8 @@ plugins: [
         "insertdatetime table contextmenu paste wordcount media code"
 ]
 toolbar1: "undo redo | bold italic | alignleft aligncenter alignright | bullist numlist outdent indent | link image media | code"
-browser_spellcheck : true 
+browser_spellcheck : true
+forced_root_block: false 
 relative_url: true 
 convert_urls: false
+paste_word_valid_elements: "b,strong,i,em,h1,h2,ul,li"
